--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -33,7 +33,7 @@
 					</li>
 					<div sec:authorize="hasRole('ADMIN')">
 						<li class="nav-item">
-							<a class="nav-link" href="#">사용자관리
+							<a class="nav-link" href="/members">사용자관리
 							</a>
 						</li>
 					</div>
